--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "element-ui": "^2.15.1",
     "qs": "^6.10.1",
     "vue": "^2.5.2",
